--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,20 +1,20 @@
 
-/* icon font path, required */
-$--font-path: "element-plus/theme-chalk/fonts";
+// /* icon font path, required */
+// $--font-path: "element-plus/theme-chalk/fonts";
 
-@import "element-plus/theme-chalk/src/index";
+// @import "element-plus/theme-chalk/src/index";
 
-// @import "element-plus/dist/index.css";
+// // @import "element-plus/dist/index.css";
 
-#nprogress .bar {
-  background: $--color-primary !important;
-}
+// #nprogress .bar {
+//   background: $--color-primary !important;
+// }
 
-#nprogress .peg {
-  box-shadow: 0 0 10px $--color-primary, 0 0 5px $--color-primary !important;
-}
+// #nprogress .peg {
+//   box-shadow: 0 0 10px $--color-primary, 0 0 5px $--color-primary !important;
+// }
 
-#nprogress .spinner-icon {
-  border-top-color: $--color-primary;
-  border-left-color: $--color-primary;
-}
+// #nprogress .spinner-icon {
+//   border-top-color: $--color-primary;
+//   border-left-color: $--color-primary;
+// }
