feat: init project

--- a/src/styles/global-class.scss
+++ b/src/styles/global-class.scss
@@ -5,3 +5,15 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+
+
+.n-data-table-table {
+  .n-data-table-tbody {
+    .n-data-table-td--fixed-right {
+      .icon-style {
+        font-size: 20px;
+      }
+    }
+  }
+}
