feat: package update

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 
-@use '@/styles/global-class.scss';
-@use '@/styles/theme.scss';
+@import '@/styles/global-class.scss';
+@import '@/styles/theme.scss';
 
 body {
   width: 100vw;
